Update Quantum Computer Course latest.ipynb

--- a/Quantum Computer Course latest.ipynb
+++ b/Quantum Computer Course latest.ipynb
@@ -639,7 +639,7 @@
     "\n",
     "\n",
     "Now we apply it to the $\\color{red}{\\vert 0\\rangle}$ that we set as our initial state:\n",
-    ">$$ H\\color{red}{\\vert 0\\rangle} = \\frac{\\vert\\ 0\\rangle+ i\\vert\\ 1\\rangle}{\\sqrt{2}} \\langle 0\\vert \\color{red}{0 \\rangle} + \\frac{\\vert\\ 0\\rangle- i\\vert\\ 1\\rangle}{\\sqrt{2}} \\langle 1\\vert\\color{red}{ 0 \\rangle} $$  \n",
+    ">$$ H\\color{red}{\\vert 0\\rangle} = \\frac{\\vert\\ 0\\rangle+ \\vert\\ 1\\rangle}{\\sqrt{2}} \\langle 0\\vert \\color{red}{0 \\rangle} + \\frac{\\vert\\ 0\\rangle- \\vert\\ 1\\rangle}{\\sqrt{2}} \\langle 1\\vert\\color{red}{ 0 \\rangle} $$  \n",
     "\n",
     "we can see that:\n",
     "$$\\langle 0\\vert0 \\rangle=\\begin{bmatrix} 1 & 0 \\end{bmatrix}\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} = (1*1) + (1*0) = 1$$\n",
@@ -647,7 +647,7 @@
     "$$\\langle 0\\vert1 \\rangle=\\begin{bmatrix} 1 & 0 \\end{bmatrix}\\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} = (1*0) + (0*1) = 0$$\n",
     "\n",
     "So we are left with just:\n",
-    ">$$ H\\vert 0\\rangle = \\frac{\\vert\\ 0\\rangle+ i\\vert\\ 1\\rangle}{\\sqrt{2}} \\langle 0\\vert 0 \\rangle $$\n",
+    ">$$ H\\vert 0\\rangle = \\frac{\\vert\\ 0\\rangle+ \\vert\\ 1\\rangle}{\\sqrt{2}} \\langle 0\\vert 0 \\rangle $$\n",
     "\n",
     "which is just the  $\\vert +\\rangle$ state\n",
     "\n",
