--- a/Quantum Computer Course .ipynb
+++ b/Quantum Computer Course .ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "12fb3a22",
    "metadata": {
     "scrolled": true
@@ -69,7 +69,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "e6384b1b",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "dd8f76b9",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "fe1225ae",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "a38c7710",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "26dec356",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "81ae8bb5",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "1886c843",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "a75066ab",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "2d31a5cd",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "a0e77f95",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "   "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "a179fa7b",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "0cafb5f0",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
        "   └───┘"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "5debc9ed",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
     "\n",
     "\n",
     "Now we apply it to the $\\color{red}{\\vert 0\\rangle}$ that we set as our initial state:\n",
-    ">$$ H\\color{red}{\\vert 0\\rangle} = \\frac{\\vert 0\\rangle+ i\\vert 1\\rangle}{\\sqrt{2}} \\langle 0\\vert \\color{red}{0 \\rangle} + \\frac{\\vert 0\\rangle- i\\vert 1\\rangle}{\\sqrt{2}} \\langle 1\\vert\\color{red}{ 0 \\rangle} $$  \n",
+    ">$$ H {\\color{red}\\vert 0\\rangle} = \\frac{\\vert 0\\rangle+ i\\vert 1\\rangle}{\\sqrt{2}} \\langle 0\\vert {\\color{red}{0 \\rangle}} + \\frac{\\vert 0\\rangle- i\\vert 1\\rangle}{\\sqrt{2}} \\langle 1\\vert{\\color{red}{ 0 \\rangle}} $$  \n",
     "\n",
     "we can see that:\n",
     "$$\\langle 0\\vert0 \\rangle=\\begin{bmatrix} 1 & 0 \\end{bmatrix}\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} = (1*1) + (1*0) = 1$$\n",
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "2b9ba762",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "71b98777",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
        "   └───┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "4125b65e",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "id": "9a9ba13b",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
     "\n",
     "- So if we apply **H** for example on ket-zero $\\color{red}{\\vert 0 \\rangle}$ we have:\n",
     "\n",
-    "$$ H\\vert \\color{red}{0 \\rangle} = \\frac{\\vert 0\\rangle + \\vert 1\\rangle}{\\sqrt{2}} \\langle 0\\vert \\color{red}{0 \\rangle} + \\frac{\\vert 0\\rangle - \\vert 1\\rangle}{\\sqrt{2}} \\langle 1\\vert \\color{red}{0 \\rangle}$$\n",
+    "$$ H\\vert {\\color{red}{0 \\rangle}} = \\frac{\\vert 0\\rangle + \\vert 1\\rangle}{\\sqrt{2}} \\langle 0\\vert {\\color{red}{0 \\rangle}} + \\frac{\\vert 0\\rangle - \\vert 1\\rangle}{\\sqrt{2}} \\langle 1\\vert {\\color{red}{0 \\rangle}}$$\n",
     "\n",
     "we have that:\n",
     "\n",
@@ -809,12 +809,12 @@
     "\n",
     "and so we have our final result:\n",
     "\n",
-    " $$H\\vert \\color{red}{0 \\rangle} = \\frac{\\vert 0\\rangle + \\vert 1\\rangle}{\\sqrt{2}} $$\n",
+    " $$H\\vert {\\color{red}{0 \\rangle}} = \\frac{\\vert 0\\rangle + \\vert 1\\rangle}{\\sqrt{2}} $$\n",
     " \n",
     " \n",
     " - in opposit let's see what happen if we apply **H** for example on ket-one $\\color{green}{\\vert 1 \\rangle}$\n",
     " \n",
-    "$$ H\\vert \\color{green}{1 \\rangle} = \\frac{\\vert 0\\rangle + \\vert 1\\rangle}{\\sqrt{2}} \\langle 0\\vert \\color{green}{1 \\rangle} + \\frac{\\vert 0\\rangle - \\vert 1\\rangle}{\\sqrt{2}} \\langle 1\\vert \\color{green}{1 \\rangle}$$\n",
+    "$$ H\\vert {\\color{green}{1 \\rangle}} = \\frac{\\vert 0\\rangle + \\vert 1\\rangle}{\\sqrt{2}} \\langle 0\\vert {\\color{green}{1 \\rangle} }+ \\frac{\\vert 0\\rangle - \\vert 1\\rangle}{\\sqrt{2}} \\langle 1\\vert {\\color{green}{1 \\rangle}}$$\n",
     "\n",
     "we have that:\n",
     "\n",
@@ -823,7 +823,7 @@
     "\n",
     "and so we have our final result:\n",
     "\n",
-    " $$H\\vert \\color{green}{1 \\rangle} = \\frac{\\vert 0\\rangle - \\vert 1\\rangle}{\\sqrt{2}} $$\n",
+    " $$H\\vert {\\color{green}{1 \\rangle}} = \\frac{\\vert 0\\rangle - \\vert 1\\rangle}{\\sqrt{2}} $$\n",
     " \n",
     " ___"
    ]
