--- a/Quantum Computer Course .ipynb
+++ b/Quantum Computer Course .ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "id": "12fb3a22",
    "metadata": {
     "scrolled": true
@@ -69,7 +69,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "id": "e6384b1b",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "id": "dd8f76b9",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "id": "fe1225ae",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "id": "a38c7710",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "id": "26dec356",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "id": "81ae8bb5",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "id": "1886c843",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "id": "a75066ab",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "id": "2d31a5cd",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "id": "a0e77f95",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "   "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "id": "a179fa7b",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "id": "0cafb5f0",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
        "   └───┘"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 86,
    "id": "5debc9ed",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 87,
    "id": "2b9ba762",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 88,
    "id": "71b98777",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
        "   └───┘"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "id": "4125b65e",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "id": "9a9ba13b",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,6 +834,14 @@
    "metadata": {},
    "source": [
     "with this little example of the Hadamard port we have seen the power that this Operator has but let's see more in depth the power of this **Operators**..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa45ae84",
+   "metadata": {},
+   "source": [
+    "# ciao papatto"
    ]
   }
  ],
