adding the Pauli operator

--- a/Quantum Computer Course .ipynb
+++ b/Quantum Computer Course .ipynb
@@ -833,8 +833,70 @@
    "id": "e63205d3",
    "metadata": {},
    "source": [
-    "with this little example of the Hadamard port we have seen the power that this Operator has but let's see more in depth the power of this **Operators**..."
+    "with this little example of the Hadamard port we have seen the power that this Operator has but let's see more in depth the power of this **Operators**...\n",
+    "\n",
+    "___\n",
+    "\n",
+    "### Pauli Operator\n",
+    "\n",
+    "- Those operatos derives from the mesaurment of the spin around the different x-y-z-axis\n",
+    "\n",
+    "## X-GATE (BIT FLIP)\n",
+    "\n",
+    "In a few words this gate just **swap the amplitudes** of $\\vert 0 \\rangle$ and $\\vert 1 \\rangle$. \n",
+    "\n",
+    ">$$ X\\vert\\ 0\\rangle = \\vert 1 \\rangle$$\n",
+    ">$$ X\\vert\\ 1\\rangle = \\vert 0 \\rangle$$\n",
+    "\n",
+    "Matrix Form:\n",
+    "\n",
+    "> $$ X = \\begin{bmatrix} \\langle 0 \\vert X\\vert 0 \\rangle & \\langle 0 \\vert X\\vert\\ 1\\rangle \\\\ \\langle 1\\vert X\\vert 0\\rangle & \\langle 1\\vert X\\vert 1\\rangle \\end{bmatrix} = \\begin{bmatrix} \\langle 0 \\vert 0 \\rangle & \\langle 0 \\vert\\ 1\\rangle \\\\ \\langle 1\\vert 1\\rangle & \\langle 1\\vert  0\\rangle \\end{bmatrix} = \\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "In formula\n",
+    "\n",
+    "> $$ X = \\vert 1\\rangle\\langle 0\\vert + \\vert 0\\rangle\\langle 1\\vert $$\n",
+    "\n",
+    "## Y-GATE (BIT FLIP + PHASE FLIP)\n",
+    "\n",
+    "- steps:\n",
+    "    1. Swap $\\vert 0\\rangle$ and $\\vert 1\\rangle$\n",
+    "    2. multiply by $ i $\n",
+    "    3. denies $\\vert 1\\rangle$ (put - in fron of it)\n",
+    "\n",
+    "Matrix Form:\n",
+    "\n",
+    "> $$ Y = \\begin{bmatrix} \\langle 0 \\vert Y\\vert 0 \\rangle & \\langle 0 \\vert Y\\vert\\ 1\\rangle \\\\ \\langle 1\\vert Y\\vert 0\\rangle & \\langle 1\\vert Y\\vert 1\\rangle \\end{bmatrix} = \\begin{bmatrix} i\\langle 0 \\vert 0 \\rangle & i\\langle 0 \\vert\\ 1\\rangle \\\\ -i\\langle 1\\vert 1\\rangle & -i\\langle 1\\vert  0\\rangle \\end{bmatrix} = \\begin{bmatrix} 0 & i \\\\ -i & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "in formula:\n",
+    "\n",
+    "> $$ Y = i\\vert 1\\rangle\\langle 0\\vert - i\\vert 0\\rangle\\langle 1\\vert $$\n",
+    "\n",
+    "## Z-GATE (PHASE FLIP)\n",
+    "\n",
+    "- steps:\n",
+    "    1. $\\vert 0\\rangle$ is not touched\n",
+    "    2. denies $\\vert 1\\rangle$ (put - in fron of it)\n",
+    "\n",
+    "Matrix Form:\n",
+    "\n",
+    "> $$ Z = \\begin{bmatrix} \\langle 0 \\vert Z\\vert 0 \\rangle & \\langle 0 \\vert Z\\vert\\ 1\\rangle \\\\ \\langle 1\\vert Z\\vert 0\\rangle & \\langle 1\\vert Z\\vert 1\\rangle \\end{bmatrix} = \\begin{bmatrix} \\langle 0 \\vert 0 \\rangle & -\\langle 0 \\vert\\ 1\\rangle \\\\ \\langle 1\\vert 0\\rangle & -\\langle 1\\vert  1\\rangle \\end{bmatrix} = \\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix} $$\n",
+    "\n",
+    "in formula:\n",
+    "\n",
+    "> $$ Z = \\vert 0\\rangle\\langle 0\\vert - \\vert 1\\rangle\\langle 1\\vert $$\n",
+    "\n",
+    "## T-GATE (PHASE DISPLACEMENT of $\\pi/8$)\n",
+    "\n",
+    "The T-gate is the general form of the Z-gate\n",
+    "\n",
+    "> R"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa59961",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
