--- a/Quantum Computer Course .ipynb
+++ b/Quantum Computer Course .ipynb
@@ -889,7 +889,11 @@
     "\n",
     "The T-gate is the general form of the Z-gate\n",
     "\n",
-    "> R"
+    "> $R_{\\theta} = \\begin{bmatrix} 1 & 0 \\\\ 0 & e^{i\\theta} \\end{bmatrix} = \\vert 0\\rangle\\langle 0\\vert - e^{i\\theta} \\vert 1\\rangle\\langle 1\\vert$\n",
+    "\n",
+    "in fact if we put $\\pi/8$ \n",
+    "\n",
+    "> $T_{\\pi/4} = \\begin{bmatrix} 1 & 0 \\\\ 0 & e^{i\\pi/4} \\end{bmatrix} = \\vert 0\\rangle\\langle 0\\vert - e^{i\\pi/4} \\vert 1\\rangle\\langle 1\\vert = e^{i\\pi/8} \\begin{bmatrix} e^{i\\pi/8} & 0 \\\\ 0 & e^{i2\\pi} \\end{bmatrix} $"
    ]
   },
   {
