--- a/Quantum Computer Course .ipynb
+++ b/Quantum Computer Course .ipynb
@@ -893,7 +893,7 @@
     "\n",
     "in fact if we put $\\pi/8$ \n",
     "\n",
-    "> $T_{\\pi/4} = \\begin{bmatrix} 1 & 0 \\\\ 0 & e^{i\\pi/4} \\end{bmatrix} = \\vert 0\\rangle\\langle 0\\vert - e^{i\\pi/4} \\vert 1\\rangle\\langle 1\\vert = e^{i\\pi/8} \\begin{bmatrix} e^{i\\pi/8} & 0 \\\\ 0 & e^{i2\\pi} \\end{bmatrix} $"
+    "> $$T_{\\pi/4} = \\begin{bmatrix} 1 & 0 \\\\ 0 & e^{i\\pi/4} \\end{bmatrix} = \\vert 0\\rangle\\langle 0\\vert - e^{i\\pi/4} \\vert 1\\rangle\\langle 1\\vert = e^{i\\pi/8} \\begin{bmatrix} e^{i\\pi/8} & 0 \\\\ 0 & e^{i2\\pi} \\end{bmatrix} $$"
    ]
   },
   {
